--- a/index.html
+++ b/index.html
@@ -1,11 +1,101 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HIMO</title>
-</head>
-<body>
-</body>
+<html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style/normalize.css" />
+    <link rel="stylesheet" href="style/slick.css">
+    <link rel="stylesheet" href="style/style.css" />
+    <title>HIMO</title>
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <a class="logo" href="#">
+            <img src="images/logo.jpg" alt="logo" />
+          </a>
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__item">
+                <a class="menu__link" href=""> Описание </a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href=""> Характеристики </a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href=""> стоимость </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <section class="bike">
+      <div class="container">
+        <div class="bike__inner">
+          <div class="bike__column">
+            <h1 class="bike__title">Xiaomi Himo C26</h1>
+            <h3 class="bike__subtitle">Электрический велосипед</h3>
+            <p class="bike__text">
+              Полная свобода передвижения и надежный транспорт для путешествий
+              на любые расстояния
+            </p>
+            <p class="bike__text">
+              HIMO C26 – это новый электровелосипед от Xiaomi, который создан
+              как для езды по городу, так и бездорожью. Он имеет мощный
+              двигатель и емкий аккумулятор, благодаря которым способен
+              проезжать на одном заряде до 100 км, что определенно выше, чем у
+              большинства конкурентов. А большие колеса с пневматическими
+              шинами, дисковые тормоза, 7-скоростная трансмиссия и эргономичное
+              сидение делают каждую поездку гораздо приятнее.
+            </p>
+            <a class="bike__link" href="">ЗАКАЗАТЬ</a>
+          </div>
+          <div class="bike__column bike__column-slider">
+            <div class="bike__slider">
+               <img class="bike-slider__item" src="images/bike-1.jpg" alt="bike-1">
+               <img class="bike-slider__item" src="images/bike-2.jpg" alt="bike-2">
+               <img class="bike-slider__item" src="images/bike-3.jpg" alt="bike-3">
+               <img class="bike-slider__item" src="images/bike-4.jpg" alt="bike-4">
+            </div>
+            <ul class="bike-list">
+              <li class="bike__list-item">
+                до 100 км
+                <span>запас хода</span>
+              </li>
+              <li class="bike__list-item">
+                25 км/ч
+                <span>макс корость</span>
+              </li>
+              <li class="bike__list-item">
+                3 режима езды
+                <span>механический, гибридный, электрический</span>
+              </li>
+              <li class="bike__list-item">
+                25 кг
+                <span>вес</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
+
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/main.js"></script>
+
+
+  </body>
 </html>
